minor(style): fix letterspacing issue

--- a/css/theme/simon.css
+++ b/css/theme/simon.css
@@ -122,7 +122,6 @@ html.tertiary-slide body {
   margin-bottom:-10px !IMPORTANT;
   margin-top:-20px !IMPORTANT;
   color: white !IMPORTANT;
-  letter-spacing:125%;
   text-shadow: 1px 2px 2px rgba(0,0,0,0.5);
 }
 
